# PolyglotInject

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  mod.json  mod.template.json  qpm.json  qpm.shared.json  start-logging.ps1
.github/workflows/: build-ndk.yml
PolyglotInject-PC/: PolyglotInject.sln
PolyglotInject-PC/PolyglotInject/: Plugin.cs  PolyglotInject.csproj  manifest.json
PolyglotInject-PC/PolyglotInject/Properties/: AssemblyInfo.cs
PolyglotInject-PC/PolyglotInject/SiraLocalizer/Providers/Crowdin/: CrowdinDistributionManifest.cs  CrowdinDownloader.cs
PolyglotInject-PC/PolyglotInject/SiraLocalizer/Utilities/: AsyncOperationAwaiter.cs  AsyncOperationExtensions.cs
PolyglotInject-PC/PolyglotInject/assets/: polyglot-inject.csv  sira-new.csv
assets/: Localization_CNMOD.txt  polyglot-inject.csv  sira-new.csv  testbundle.asset
include/: assets.hpp  boolinq.h  fontLoader.hpp  helpers.h  main.hpp
scriptes/: SiraLocalToPolyglotInject.py  UpdateFromOld.py
scripts/: createqmod.ps1
src/: FontLoader.cpp  helpers.cpp  main.cpp
